# tidal-helper

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  init_db.py  pyproject.toml  tidal_helper.db  verify_bcrypt.py
backend/alembic/: env.py
backend/alembic/versions/: 3e68da44fa7f_add_is_available_to_song_and_tidal_id_.py  ab5abdcff5ee_add_last_synced_at_to_playlist.py  cad9268f77e7_add_playlist_and_song_models.py  e4faf38d397b_add_token_type_and_change_name_expires_.py
backend/app/: main.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  playlists.py  songs.py  sync.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  playlist.py  playlist_song_link.py  song.py  tidal_token.py  user.py
backend/app/services/: __init__.py  playlist_service.py  sync_service.py  tidal.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/components/: ConfirmationModal.vue  MoveToPlaylistModal.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  playlists.ts
frontend/src/views/: DashboardView.vue  LoginView.vue  PlaylistDetailView.vue  QuickEditView.vue  SignupView.vue  TidalCallbackView.vue
tidal-connection-demo/: main.py
